syntax = "proto3";

option java_package = "online.tianran.netty.protobuf";
option java_outer_classname = "SubscribeRespProto";

message SubscribeResp {
  int32 subReqID = 1;
  int32 respCode = 2;
  string desc = 3;
}

// protoc .\src\main\java\online\tianran\netty\protobuf\SubscribeResp.proto --java_out=.\src\main\java